feat: add positionscanner for position matching (#145)